@@ -70,8 +70,6 @@ class QuotePlugin : public QTabDialog
     void printStatusLogMessage (QString &);
     void help ();
     void slotWakeup ();
-    void startWakeup (int);
-    void stopWakeup ();
     
   protected:
     QString file;
@@ -92,8 +90,6 @@ class QuotePlugin : public QTabDialog
     QGridLayout *grid;
     QSpinBox *retrySpin;
     QSpinBox *timeoutSpin;
-    QTimer *wakeupTimer;
-    int wakeupInterval;
 };
 
 #endif
